--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -46,3 +46,7 @@ p{
   opacity: 0;
   transition: opacity 400ms, visibility 400ms;
 }
+
+.select{
+  @apply bg-indigo-950 text-white outline-none rounded-lg block w-full px-3 py-2
+}
